rest-frontend: fast, nodep, cross-platform and 100% free (+ second option as comment)

--- a/src/tools/rest-frontend/public/pages/main/website/home.html
+++ b/src/tools/rest-frontend/public/pages/main/website/home.html
@@ -13,6 +13,9 @@
                 {{ 'APP.HOME.BUTTON.TUTORIALS' | translate }}
             </button>
         </div>
+        <h4 class="slogan-slave text-center sm-mt-15">
+            <small translate="APP.HOME.HEADLINE.SLOGAN.THIRD"></small>
+        </h4>
         <hr class="sm-mt-40 sm-mb-40" />
         <!-- Selling points -->
         <div class="row">
@@ -207,5 +210,47 @@
 				<p translate="APP.HOME.LABEL.TOOL.WEBGUI.DETAILS" translate-compile></p>
 			</div>
 		</div>
+<!--		<hr class="sm-mt-30 sm-mb-30">
+        <div class="row lg-mt-30 sm-mt-20">
+            <div class="col-md-4">
+                <div class="md-pl-15 md-pr-15">
+                    <div class="media">
+                        <div class="media-left">
+                            <i class="media-icon fa fa-fast-forward"></i>
+                        </div>
+                        <div class="media-right media-middle">
+                            <h4 class="media-heading" translate="APP.HOME.LABEL.KEYFACT.7.HEADLINE" translate-compile></h4>
+                        </div>
+                    </div>
+                    <span class="key-fact-details" translate="APP.HOME.LABEL.KEYFACT.7.DETAILS" translate-compile></span>
+                </div>
+            </div>
+            <div class="col-md-4 lg-mt-0 sm-mt-20">
+                <div class="md-pl-15 md-pr-15">
+                    <div class="media">
+                        <div class="media-left">
+                            <i class="media-icon fa fa-money"></i>
+                        </div>
+                        <div class="media-right media-middle">
+                            <h4 class="media-heading" translate="APP.HOME.LABEL.KEYFACT.8.HEADLINE" translate-compile></h4>
+                        </div>
+                    </div>
+                    <span class="key-fact-details" translate="APP.HOME.LABEL.KEYFACT.8.DETAILS" translate-compile></span>
+                </div>
+            </div>
+            <div class="col-md-4 lg-mt-0 sm-mt-20">
+                <div class="md-pl-15 md-pr-15">
+                    <div class="media">
+                        <div class="media-left">
+                            <i class="media-icon fa fa-arrows-alt"></i>
+                        </div>
+                        <div class="media-right media-middle">
+                            <h4 class="media-heading" translate="APP.HOME.LABEL.KEYFACT.9.HEADLINE" translate-compile></h4>
+                        </div>
+                    </div>
+                    <span class="key-fact-details" translate="APP.HOME.LABEL.KEYFACT.9.DETAILS" translate-compile></span>
+                </div>
+            </div>
+        </div>-->
     </div>
 </div>
