rest-frontend: add oyranos logo on home page

--- a/src/tools/rest-frontend/public/pages/main/website/home.html
+++ b/src/tools/rest-frontend/public/pages/main/website/home.html
@@ -200,6 +200,9 @@
             <div class="col-md-4 sm-mb-30 lg-mb-0">
                 <h4>{{ 'APP.HOME.LABEL.TOOL.OTHERS.HEADLINE' | translate }}</h4>
                 <p translate="APP.HOME.LABEL.TOOL.OTHERS.DETAILS" translate-compile></p>
+                <p class="text-center sm-mt-30 lg-mt-50 sm-mb-30">
+                    <img src="website/img/oyranos-km-logo.svg" />
+                </p>
             </div>
             <div class="col-md-8">
                 <img src="website/img/oyranos-kolor-manager.png" style="width:100%;margin:-15px 0px;" />
