--- a/src/tools/rest-frontend/public/pages/main/entries/form.html
+++ b/src/tools/rest-frontend/public/pages/main/entries/form.html
@@ -4,7 +4,7 @@
             <div ng-class="{'form-horizontal': isCreate}">
                 <div class="form-group has-feedback"
                      ng-class="{'has-error': entryForm.title.$invalid && !entryForm.title.$pristine,
-								'has-success': entryForm.title.$valid && entryForm.title.$dirty}">
+                                'has-success': entryForm.title.$valid && entryForm.title.$dirty}">
                     <label for="title" class="control-label" ng-class="{'col-md-3': isCreate}">
                         {{ 'APP.ENTRIES.FORM.LABEL.TITLE' | translate }}
                     </label>
@@ -15,7 +15,7 @@
                                placeholder="{{ 'APP.ENTRIES.FORM.PLACEHOLDER.TITLE' | translate }}">
                         <span class="fa form-control-feedback"
                               ng-class="{'fa-times': entryForm.title.$invalid && entryForm.title.$dirty,
-										 'fa-check': !entryForm.title.$invalid && entryForm.title.$dirty}"></span>
+                                         'fa-check': !entryForm.title.$invalid && entryForm.title.$dirty}"></span>
                         <div ng-show="entryForm.title.$invalid && entryForm.title.$dirty">
                             <span class="help-block mt5 ml10" ng-messages="entryForm.title.$error">
                                 <span ng-message="required">{{ 'APP.ENTRIES.FORM.LABEL.VALIDATION.TITLE.REQUIRED' | translate }}</span>
@@ -28,7 +28,7 @@
                 </div>
                 <div class="form-group has-feedback"
                      ng-class="{'has-error': entryForm.description.$invalid && !entryForm.description.$pristine,
-								'has-success': entryForm.description.$valid && entryForm.description.$dirty}">
+                                'has-success': entryForm.description.$valid && entryForm.description.$dirty}">
                     <label for="description" class="control-label" ng-class="{'col-md-3': isCreate}">
                         {{ 'APP.ENTRIES.FORM.LABEL.DESCRIPTION' | translate }}
                     </label>
@@ -40,7 +40,7 @@
                                   style="resize:vertical;min-height:135px;"></textarea>
                         <span class="fa form-control-feedback"
                               ng-class="{'fa-times': entryForm.description.$invalid && entryForm.description.$dirty,
-										 'fa-check': !entryForm.description.$invalid && entryForm.description.$dirty}"></span>
+                                         'fa-check': !entryForm.description.$invalid && entryForm.description.$dirty}"></span>
                         <div ng-show="entryForm.description.$invalid && entryForm.description.$dirty">
                             <span class="help-block mt5 ml10" ng-messages="entryForm.description.$error">
                                 <span ng-message="required">{{ 'APP.ENTRIES.FORM.LABEL.VALIDATION.DESCRIPTION.REQUIRED' | translate }}</span>
@@ -56,7 +56,7 @@
             <div class="form-horizontal">
                 <div class="form-group has-feedback"
                      ng-class="{'has-error': entryForm.organization.$invalid && !entryForm.organization.$pristine,
-								'has-success': entryForm.organization.$valid && entryForm.organization.$dirty}">
+                                'has-success': entryForm.organization.$valid && entryForm.organization.$dirty}">
                     <label for="organization" class="control-label col-md-3">
                         {{ 'APP.ENTRIES.FORM.LABEL.ORGANIZATION' | translate }}
                     </label>
@@ -75,7 +75,7 @@
                         </div>
                         <span class="fa form-control-feedback" style="right:48px;"
                               ng-class="{'fa-times': entryForm.organization.$invalid && entryForm.organization.$dirty,
-										 'fa-check': !entryForm.organization.$invalid && entryForm.organization.$dirty}"></span>
+                                         'fa-check': !entryForm.organization.$invalid && entryForm.organization.$dirty}"></span>
                         <div ng-show="entryForm.organization.$invalid && entryForm.organization.$dirty">
                             <span class="help-block mt5 ml10" ng-messages="entryForm.organization.$error">
                                 <span ng-message="required">{{ 'APP.ENTRIES.FORM.LABEL.VALIDATION.ORGANIZATION.REQUIRED' | translate }}</span>
@@ -88,7 +88,7 @@
                 </div>
                 <div class="form-group has-feedback"
                      ng-class="{'has-error': entryForm.application.$invalid && !entryForm.application.$pristine,
-								'has-success': entryForm.application.$valid && entryForm.application.$dirty}">
+                                'has-success': entryForm.application.$valid && entryForm.application.$dirty}">
                     <label for="application" class="control-label col-md-3">
                         {{ 'APP.ENTRIES.FORM.LABEL.APPLICATION' | translate }}
                     </label>
@@ -107,7 +107,7 @@
                         </div>
                         <span class="fa form-control-feedback" style="right:48px;"
                               ng-class="{'fa-times': entryForm.application.$invalid && entryForm.application.$dirty,
-										 'fa-check': !entryForm.application.$invalid && entryForm.application.$dirty}"></span>
+                                         'fa-check': !entryForm.application.$invalid && entryForm.application.$dirty}"></span>
                         <div ng-show="entryForm.application.$invalid && entryForm.application.$dirty">
                             <span class="help-block mt5 ml10" ng-messages="entryForm.application.$error">
                                 <span ng-message="required">{{ 'APP.ENTRIES.FORM.LABEL.VALIDATION.APPLICATION.REQUIRED' | translate }}</span>
@@ -120,7 +120,7 @@
                 </div>
                 <div class="form-group has-feedback"
                      ng-class="{'has-error': entryForm.scope.$invalid && !entryForm.scope.$pristine,
-								'has-success': entryForm.scope.$valid && entryForm.scope.$dirty}">
+                                'has-success': entryForm.scope.$valid && entryForm.scope.$dirty}">
                     <label for="scope" class="control-label col-md-3">
                         {{ 'APP.ENTRIES.FORM.LABEL.SCOPE' | translate }}
                     </label>
@@ -138,7 +138,7 @@
                         </div>
                         <span class="fa form-control-feedback" style="right:48px;"
                               ng-class="{'fa-times': entryForm.scope.$invalid && entryForm.scope.$dirty,
-										 'fa-check': !entryForm.scope.$invalid && entryForm.scope.$dirty}"></span>
+                                         'fa-check': !entryForm.scope.$invalid && entryForm.scope.$dirty}"></span>
                         <div ng-show="entryForm.scope.$invalid && entryForm.scope.$dirty">
                             <span class="help-block mt5 ml10" ng-messages="entryForm.scope.$error">
                                 <span ng-message="required">{{ 'APP.ENTRIES.FORM.LABEL.VALIDATION.SCOPE.REQUIRED' | translate }}</span>
@@ -151,7 +151,7 @@
                 </div>
                 <div class="form-group has-feedback"
                      ng-class="{'has-error': entryForm.slug.$invalid && !entryForm.slug.$pristine,
-								'has-success': entryForm.slug.$valid && entryForm.slug.$dirty}">
+                                'has-success': entryForm.slug.$valid && entryForm.slug.$dirty}">
                     <label for="slug" class="control-label col-md-3">
                         {{ 'APP.ENTRIES.FORM.LABEL.SLUG' | translate }}
                     </label>
@@ -173,7 +173,7 @@
                         </div>
                         <span class="fa form-control-feedback" style="right:48px;"
                               ng-class="{'fa-times': entryForm.slug.$invalid && entryForm.slug.$dirty,
-										 'fa-check': !entryForm.slug.$invalid && entryForm.slug.$dirty}"></span>
+                                         'fa-check': !entryForm.slug.$invalid && entryForm.slug.$dirty}"></span>
                         <div ng-show="entryForm.slug.$invalid && entryForm.slug.$dirty">
                             <span class="help-block mt5 ml10" ng-messages="entryForm.slug.$error">
                                 <span ng-message="required">{{ 'APP.ENTRIES.FORM.LABEL.VALIDATION.SLUG.REQUIRED' | translate }}</span>
@@ -214,7 +214,7 @@
             <div>
                 <div class="form-group"
                      ng-class="{'has-error': entryForm.config_format.$invalid && !entryForm.config_format.$pristine,
-								'has-success': entryForm.config_format.$valid && entryForm.config_format.$dirty}">
+                                'has-success': entryForm.config_format.$valid && entryForm.config_format.$dirty}">
                     <label for="config_format" class="control-label">
                         {{ 'APP.ENTRIES.FORM.LABEL.CONFIGURATION.FORMAT' | translate }}
                     </label>
@@ -229,9 +229,16 @@
                         </span>
                     </div>
                 </div>
+                <div class="form-group">
+                    <label for="config_format_conf" class="control-label">
+                        {{ 'APP.ENTRIES.FORM.LABEL.CONFIGURATION.FORMAT.CONF' | translate }}
+                    </label>
+                    <input type="text" id="config_format_conf" name="config_format_conf" class="form-control"
+                           ng-model="entry.configuration.formatconf" />
+                </div>
                 <div class="form-group has-feedback"
                      ng-class="{'has-error': entryForm.config_value.$invalid && !entryForm.config_value.$pristine,
-								'has-success': entryForm.config_value.$valid && entryForm.config_value.$dirty}">
+                                'has-success': entryForm.config_value.$valid && entryForm.config_value.$dirty}">
                     <label for="config_value" class="control-label">
                         {{ 'APP.ENTRIES.FORM.LABEL.CONFIGURATION.VALUE' | translate }}
                     </label>
@@ -242,7 +249,7 @@
                               style="resize:vertical;min-height:250px;"></textarea>
                     <span class="fa form-control-feedback"
                           ng-class="{'fa-times': entryForm.config_value.$invalid && entryForm.config_value.$dirty,
-									 'fa-check': !entryForm.config_value.$invalid && entryForm.config_value.$dirty}"></span>
+                                     'fa-check': !entryForm.config_value.$invalid && entryForm.config_value.$dirty}"></span>
                     <div ng-show="entryForm.config_value.$invalid && entryForm.config_value.$dirty">
                         <span class="help-block mt5 ml10" ng-messages="entryForm.config_value.$error">
                             <span ng-message="required">{{ 'APP.ENTRIES.FORM.LABEL.VALIDATION.CONFIG_VALUE.REQUIRED' | translate }}</span>
