rest-frontend: make block text on home page

--- a/src/tools/rest-frontend/public/pages/main/website/home.html
+++ b/src/tools/rest-frontend/public/pages/main/website/home.html
@@ -34,7 +34,7 @@
                             <h4 class="media-heading" translate="APP.HOME.LABEL.KEYFACT.1.HEADLINE" translate-compile></h4>
                         </div>
                     </div>
-                    <span class="key-fact-details" translate="APP.HOME.LABEL.KEYFACT.1.DETAILS" translate-compile></span>
+                    <p class="key-fact-details text-justify" translate="APP.HOME.LABEL.KEYFACT.1.DETAILS" translate-compile></p>
                 </div>
             </div>
             <div class="col-md-4 lg-mt-0 sm-mt-20">
@@ -47,7 +47,7 @@
                             <h4 class="media-heading" translate="APP.HOME.LABEL.KEYFACT.2.HEADLINE" translate-compile></h4>
                         </div>
                     </div>
-                    <span class="key-fact-details" translate="APP.HOME.LABEL.KEYFACT.2.DETAILS" translate-compile></span>
+                    <p class="key-fact-details text-justify" translate="APP.HOME.LABEL.KEYFACT.2.DETAILS" translate-compile></p>
                 </div>
             </div>
             <div class="col-md-4 lg-mt-0 sm-mt-20">
@@ -60,7 +60,7 @@
                             <h4 class="media-heading" translate="APP.HOME.LABEL.KEYFACT.3.HEADLINE" translate-compile></h4>
                         </div>
                     </div>
-                    <span class="key-fact-details" translate="APP.HOME.LABEL.KEYFACT.3.DETAILS" translate-compile></span>
+                    <p class="key-fact-details text-justify" translate="APP.HOME.LABEL.KEYFACT.3.DETAILS" translate-compile></p>
                 </div>
             </div>
         </div>
@@ -75,7 +75,7 @@
                             <h4 class="media-heading" translate="APP.HOME.LABEL.KEYFACT.4.HEADLINE" translate-compile></h4>
                         </div>
                     </div>
-                    <span class="key-fact-details" translate="APP.HOME.LABEL.KEYFACT.4.DETAILS" translate-compile></span>
+                    <p class="key-fact-details text-justify" translate="APP.HOME.LABEL.KEYFACT.4.DETAILS" translate-compile></p>
                 </div>
             </div>
             <div class="col-md-4 lg-mt-0 sm-mt-20">
@@ -88,7 +88,7 @@
                             <h4 class="media-heading" translate="APP.HOME.LABEL.KEYFACT.5.HEADLINE" translate-compile></h4>
                         </div>
                     </div>
-                    <span class="key-fact-details" translate="APP.HOME.LABEL.KEYFACT.5.DETAILS" translate-compile></span>
+                    <p class="key-fact-details text-justify" translate="APP.HOME.LABEL.KEYFACT.5.DETAILS" translate-compile></p>
                 </div>
             </div>
             <div class="col-md-4 lg-mt-0 sm-mt-20">
@@ -101,7 +101,7 @@
                             <h4 class="media-heading" translate="APP.HOME.LABEL.KEYFACT.6.HEADLINE" translate-compile></h4>
                         </div>
                     </div>
-                    <span class="key-fact-details" translate="APP.HOME.LABEL.KEYFACT.6.DETAILS" translate-compile></span>
+                    <p class="key-fact-details text-justify" translate="APP.HOME.LABEL.KEYFACT.6.DETAILS" translate-compile></p>
                 </div>
             </div>
         </div>
@@ -140,8 +140,7 @@
                         <i class="fa fa-plug"></i>
                         <span class="md-pl-10">{{ 'APP.HOME.LABEL.ORIENTATION.1.HEADLINE' | translate }}</span>
                     </h4>
-                    <span translate="APP.HOME.LABEL.ORIENTATION.1.DETAILS" translate-compile>
-                    </span>
+                    <p class="text-justify" translate="APP.HOME.LABEL.ORIENTATION.1.DETAILS" translate-compile></p>
                 </div>
             </div>
             <div class="col-md-4 lg-mt-0 sm-mt-20">
@@ -150,8 +149,7 @@
                         <i class="fa fa-code"></i>
                         <span class="md-pl-10">{{ 'APP.HOME.LABEL.ORIENTATION.2.HEADLINE' | translate }}</span>
                     </h4>
-                    <span translate="APP.HOME.LABEL.ORIENTATION.2.DETAILS" translate-compile>
-                    </span>
+                    <p class="text-justify" translate="APP.HOME.LABEL.ORIENTATION.2.DETAILS" translate-compile></p>
                 </div>
             </div>
             <div class="col-md-4 lg-mt-0 sm-mt-20">
@@ -160,8 +158,7 @@
                         <i class="fa fa-question-circle-o"></i>
                         <span class="md-pl-10">{{ 'APP.HOME.LABEL.ORIENTATION.3.HEADLINE' | translate }}</span>
                     </h4>
-                    <span translate="APP.HOME.LABEL.ORIENTATION.3.DETAILS" translate-compile>
-                    </span>
+                    <p class="text-justify" translate="APP.HOME.LABEL.ORIENTATION.3.DETAILS" translate-compile></p>
                 </div>
             </div>
         </div>
@@ -172,7 +169,7 @@
                         <i class="fa fa-share-alt"></i>
                         <span class="md-pl-10">{{ 'APP.HOME.LABEL.ORIENTATION.4.HEADLINE' | translate }}</span>
                     </h4>
-                    <p translate="APP.HOME.LABEL.ORIENTATION.4.DETAILS" translate-compile></p>
+                    <p class="text-justify" translate="APP.HOME.LABEL.ORIENTATION.4.DETAILS" translate-compile></p>
                 </div>
             </div>
             <div class="col-md-4 lg-mt-0 sm-mt-20">
@@ -181,7 +178,7 @@
                         <i class="fa fa-bolt"></i>
                         <span class="md-pl-10">{{ 'APP.HOME.LABEL.ORIENTATION.5.HEADLINE' | translate }}</span>
                     </h4>
-                    <p translate="APP.HOME.LABEL.ORIENTATION.5.DETAILS" translate-compile></p>
+                    <p class="text-justify" translate="APP.HOME.LABEL.ORIENTATION.5.DETAILS" translate-compile></p>
                 </div>
             </div>
         </div>
@@ -192,14 +189,14 @@
             </div>
             <div class="col-md-4 lg-mt-0 sm-mt-20">
                 <h4>{{ 'APP.HOME.LABEL.TOOL.QTGUI.HEADLINE' | translate }}</h4>
-                <p translate="APP.HOME.LABEL.TOOL.QTGUI.DETAILS" translate-compile></p>
+                <p class="text-justify" translate="APP.HOME.LABEL.TOOL.QTGUI.DETAILS" translate-compile></p>
             </div>
         </div>
         <hr class="sm-mt-20 lg-mt-30 sm-mb-20 lg-mb-30">
         <div class="row">
             <div class="col-md-4 sm-mb-30 lg-mb-0">
                 <h4>{{ 'APP.HOME.LABEL.TOOL.OTHERS.HEADLINE' | translate }}</h4>
-                <p translate="APP.HOME.LABEL.TOOL.OTHERS.DETAILS" translate-compile></p>
+                <p class="text-justify" translate="APP.HOME.LABEL.TOOL.OTHERS.DETAILS" translate-compile></p>
                 <p class="text-center sm-mt-30 lg-mt-50 sm-mb-30">
                     <img src="website/img/oyranos-km-logo.svg" />
                 </p>
@@ -215,50 +212,8 @@
             </div>
             <div class="col-md-4">
                 <h4>{{ 'APP.HOME.LABEL.TOOL.WEBGUI.HEADLINE' | translate }}</h4>
-                <p translate="APP.HOME.LABEL.TOOL.WEBGUI.DETAILS" translate-compile></p>
+                <p class="text-justify" translate="APP.HOME.LABEL.TOOL.WEBGUI.DETAILS" translate-compile></p>
             </div>
         </div>
-<!--        <hr class="sm-mt-30 sm-mb-30">
-        <div class="row lg-mt-30 sm-mt-20">
-            <div class="col-md-4">
-                <div class="md-pl-15 md-pr-15">
-                    <div class="media">
-                        <div class="media-left">
-                            <i class="media-icon fa fa-fast-forward"></i>
-                        </div>
-                        <div class="media-right media-middle">
-                            <h4 class="media-heading" translate="APP.HOME.LABEL.KEYFACT.7.HEADLINE" translate-compile></h4>
-                        </div>
-                    </div>
-                    <span class="key-fact-details" translate="APP.HOME.LABEL.KEYFACT.7.DETAILS" translate-compile></span>
-                </div>
-            </div>
-            <div class="col-md-4 lg-mt-0 sm-mt-20">
-                <div class="md-pl-15 md-pr-15">
-                    <div class="media">
-                        <div class="media-left">
-                            <i class="media-icon fa fa-money"></i>
-                        </div>
-                        <div class="media-right media-middle">
-                            <h4 class="media-heading" translate="APP.HOME.LABEL.KEYFACT.8.HEADLINE" translate-compile></h4>
-                        </div>
-                    </div>
-                    <span class="key-fact-details" translate="APP.HOME.LABEL.KEYFACT.8.DETAILS" translate-compile></span>
-                </div>
-            </div>
-            <div class="col-md-4 lg-mt-0 sm-mt-20">
-                <div class="md-pl-15 md-pr-15">
-                    <div class="media">
-                        <div class="media-left">
-                            <i class="media-icon fa fa-arrows-alt"></i>
-                        </div>
-                        <div class="media-right media-middle">
-                            <h4 class="media-heading" translate="APP.HOME.LABEL.KEYFACT.9.HEADLINE" translate-compile></h4>
-                        </div>
-                    </div>
-                    <span class="key-fact-details" translate="APP.HOME.LABEL.KEYFACT.9.DETAILS" translate-compile></span>
-                </div>
-            </div>
-        </div>-->
     </div>
 </div>
