--- a/src/tools/rest-frontend/public/pages/main/template.html
+++ b/src/tools/rest-frontend/public/pages/main/template.html
@@ -103,6 +103,12 @@
         <div ncy-breadcrumb></div>
         <p class="text-right copyright">
             <span>
+                {{ 'APP.GLOBAL.FOOTER.LABEL.LASTUPDATE' | translate:builddate }}
+            </span>
+            <span class="md-ml-10 md-mr-10">
+                &diams;
+            </span>
+            <span>
                 <a href="rss/feed.rss" type="application/atom+xml" target="_self">
                     <img src="assets/img/rss-feed-14x14.png" />
                 </a>
