--- a/src/tools/rest-frontend/public/pages/main/template.html
+++ b/src/tools/rest-frontend/public/pages/main/template.html
@@ -124,7 +124,7 @@
             <span class="md-ml-10 md-mr-10">
                 &diams;
             </span>
-            <span date-now="yyyy"></span> &copy; <a href="http://libelektra.org">ElektraInitiative</a>
+            <span date-now="yyyy"></span> <a href="/devgettingstarted/license">&copy; ElektraInitiative</a>
             <a class="scroll-to-top text-info" ng-click="ctrl.scrollToTop()"
                title="{{ 'APP.GLOBAL.FOOTER.LINK.TITLE.SCROLLTOTOP' | translate }}">
                 <i class="fa fa-arrow-up"></i>
