rest-frontend: add 'show on github' button to docu pages

--- a/src/tools/rest-frontend/public/pages/main/website/news.html
+++ b/src/tools/rest-frontend/public/pages/main/website/news.html
@@ -18,6 +18,9 @@
     <div class="col-md-9">
         <div class="panel panel-default">
             <div class="panel-body">
+                <a class="btn btn-default btn-sm pull-right"
+                   href="{{ githubRoot + currentFile.file }}"
+                   target="_blank">{{ 'APP.WEBSITE.LISTFILES.BUTTON.SHOWONGITHUB' | translate }}</a>
                 <div class="docu markdown" id="markdown-document">
                 </div>
             </div>
