--- a/src/tools/rest-frontend/public/pages/main/website/listfiles.html
+++ b/src/tools/rest-frontend/public/pages/main/website/listfiles.html
@@ -22,6 +22,9 @@
     <div ng-class="{'col-md-9': files.length > 1, 'col-md-12': files.length <= 1}">
         <div class="panel panel-default">
             <div class="panel-body">
+                <a class="btn btn-default btn-sm pull-right"
+                   href="{{ githubRoot + currentFile.options.path }}"
+                   target="_blank">{{ 'APP.WEBSITE.LISTFILES.BUTTON.SHOWONGITHUB' | translate }}</a>
                 <div class="docu markdown" id="markdown-document">
                 </div>
             </div>
