--- a/src/tools/rest-frontend/public/pages/main/template.html
+++ b/src/tools/rest-frontend/public/pages/main/template.html
@@ -25,14 +25,22 @@
                 </div>
             </div>
             <ul class="nav navbar-nav navbar-right col-md-3" style="margin-right:0px">
-                <li ng-if="authenticated" class="pull-right">
-                    <a ui-sref="main.auth.logout">{{ 'APP.NAV.BUTTON.LOGOUT' | translate }}</a>
+                <li ng-if="authenticated" class="dropdown pull-right" uib-dropdown>
+                    <a href="#" uib-dropdown-toggle>
+                        {{ $rootScope.currentUser.username }} <span class="caret"></span>
+                    </a>
+                    <ul uib-dropdown-menu>
+                        <li>
+                            <a ui-sref="main.account">{{ 'APP.NAV.BUTTON.ACCOUNT' | translate }}</a>
+                        </li>
+                        <li role="separator" class="divider"></li>
+                        <li>
+                            <a ui-sref="main.auth.logout">{{ 'APP.NAV.BUTTON.LOGOUT' | translate }}</a>
+                        </li>
+                    </ul>
                 </li>
                 <li ng-if="!authenticated" class="pull-right">
                     <a ui-sref="main.auth.login">{{ 'APP.NAV.BUTTON.LOGIN' | translate }}</a>
-                </li>
-                <li ng-if="authenticated" class="pull-right">
-                    <a ui-sref="main.account">{{ 'APP.NAV.BUTTON.ACCOUNT' | translate }}</a>
                 </li>
             </ul>
         </div>
@@ -49,8 +57,7 @@
                         <a ui-sref="main.news">{{ 'APP.NAV.BUTTON.MAIN.NEWS' | translate }}</a>
                     </li>
                     <li ng-repeat="entry in menu"
-                        ng-class="{
-                                    active: $state.includes('main.dyn.' + entry.ref), dropdown: entry.type === 'submenu'}"
+                        ng-class="{active: $state.includes('main.dyn.' + entry.ref), dropdown: entry.type === 'submenu'}"
                         ng-attr-uib-dropdown="{{ entry.type === 'submenu' && '' || undefined }}">
                         <a ng-if="entry.type === 'listfiles'" ui-sref="{{ 'main.dyn.' + entry.ref}}">{{ entry.name}}</a>
                         <a ng-if="entry.type === 'link'" href="{{ entry.options.path}}" target="_blank">
