rest-frontend: show 'no search results found' on empty result

--- a/src/tools/rest-frontend/public/pages/main/entries/search.html
+++ b/src/tools/rest-frontend/public/pages/main/entries/search.html
@@ -110,6 +110,9 @@
 						</button>
 					</td>
 				</tr>
+				<tr ng-show="!searchResult.entries">
+					<th colspan="8" class="text-center">{{ 'APP.ENTRIES.SEARCH.TABLE.LABEL.NORESULTS' | translate }}</th>
+				</tr>
 			</tbody>
 		</table>
 	</div>
