--- a/src/tools/rest-frontend/public/pages/main/website/home.html
+++ b/src/tools/rest-frontend/public/pages/main/website/home.html
@@ -95,7 +95,7 @@
                 <div class="md-pl-15 md-pr-15">
                     <div class="media">
                         <div class="media-left">
-                            <i class="media-icon fa fa-cogs"></i>
+                            <i class="media-icon fa fa-bolt"></i>
                         </div>
                         <div class="media-right media-middle">
                             <h4 class="media-heading" translate="APP.HOME.LABEL.KEYFACT.6.HEADLINE" translate-compile></h4>
@@ -175,7 +175,7 @@
             <div class="col-md-4 lg-mt-0 sm-mt-20">
                 <div class="md-pl-15 md-pr-15">
                     <h4>
-                        <i class="fa fa-bolt"></i>
+                        <i class="fa fa-cogs"></i>
                         <span class="md-pl-10">{{ 'APP.HOME.LABEL.ORIENTATION.5.HEADLINE' | translate }}</span>
                     </h4>
                     <p class="text-justify" translate="APP.HOME.LABEL.ORIENTATION.5.DETAILS" translate-compile></p>
