--- a/src/tools/rest-frontend/public/pages/main/website/home.html
+++ b/src/tools/rest-frontend/public/pages/main/website/home.html
@@ -4,7 +4,7 @@
         <h1 class="slogan-master text-center">
             <span>{{ 'APP.HOME.HEADLINE.SLOGAN.FIRST' | translate }}</span>
             <span typewrite text="slogan.adjectives" initial-delay="1500" type-delay="175"
-                  erase-delay="160" blink-cursor="true" blink-delay="200"></span>
+                  erase-delay="160" blink-cursor="false" blink-delay="200"></span>
             <span style="margin-left:-10px">.</span>
         </h1>
         <h2 class="slogan-slave text-center">
