--- a/src/tools/rest-frontend/public/pages/main/website/conversion.html
+++ b/src/tools/rest-frontend/public/pages/main/website/conversion.html
@@ -11,7 +11,7 @@
                     <div class="col-md-6">
                         <div class="form-group has-feedback"
                              ng-class="{'has-error': convertForm.input_format.$invalid && !convertForm.input_format.$pristine,
-								'has-success': convertForm.input_format.$valid && convertForm.input_format.$dirty}">
+                                'has-success': convertForm.input_format.$valid && convertForm.input_format.$dirty}">
                             <label for="input_format" class="control-label">
                                 {{ 'APP.CONVERSION.LABEL.INPUT.FORMAT' | translate }}
                             </label>
@@ -28,14 +28,17 @@
                         </div>
                         <div class="form-group">
                             <label for="input_format_conf" class="control-label">
-                                {{ 'APP.CONVERSION.LABEL.INPUT.FORMAT.CONF' | translate }}
+                                <span>{{ 'APP.CONVERSION.LABEL.INPUT.FORMAT.CONF' | translate }}</span>
+                                <span>
+                                    <i class="fa fa-question-circle-o" title="{{ 'APP.CONVERSION.ALTTEXT.FORMATCONF' | translate }}"></i>
+                                </span>
                             </label>
                             <input type="text" id="input_format_conf" name="input_format_conf" class="form-control"
                                    ng-model="parameters.input.formatconf" />
                         </div>
                         <div class="form-group has-feedback"
                              ng-class="{'has-error': convertForm.input_snippet.$invalid && !convertForm.input_snippet.$pristine,
-								'has-success': convertForm.input_snippet.$valid && convertForm.input_snippet.$dirty}">
+                                'has-success': convertForm.input_snippet.$valid && convertForm.input_snippet.$dirty}">
                             <label for="input_snippet" class="control-label">
                                 {{ 'APP.CONVERSION.LABEL.INPUT.SNIPPET' | translate }}
                             </label>
@@ -45,7 +48,7 @@
                                       rows="13" ng-required="parameters.input.format.format !== 'info'"></textarea>
                             <span class="fa form-control-feedback"
                                   ng-class="{'fa-times': convertForm.input_snippet.$invalid && convertForm.input_snippet.$dirty,
-											 'fa-check': !convertForm.input_snippet.$invalid && convertForm.input_snippet.$dirty}"></span>
+                                             'fa-check': !convertForm.input_snippet.$invalid && convertForm.input_snippet.$dirty}"></span>
                             <div ng-show="convertForm.input_snippet.$invalid && convertForm.input_snippet.$dirty">
                                 <span class="help-block mt5 ml10" ng-messages="convertForm.input_snippet.$error">
                                     <span ng-message="required">{{ 'APP.CONVERSION.LABEL.VALIDATION.INPUT.SNIPPET.REQUIRED' | translate }}</span>
@@ -56,7 +59,7 @@
                     <div class="col-md-6">
                         <div class="form-group has-feedback"
                              ng-class="{'has-error': convertForm.output_format.$invalid && !convertForm.output_format.$pristine,
-								'has-success': convertForm.output_format.$valid && convertForm.output_format.$dirty}">
+                                'has-success': convertForm.output_format.$valid && convertForm.output_format.$dirty}">
                             <label for="output_format" class="control-label">
                                 {{ 'APP.CONVERSION.LABEL.OUTPUT.FORMAT' | translate }}
                             </label>
@@ -71,13 +74,16 @@
                                 </span>
                             </div>
                         </div>
-						<div class="form-group">
-							<label for="output_format_conf" class="control-label">
-								{{ 'APP.CONVERSION.LABEL.OUTPUT.FORMAT.CONF' | translate }}
-							</label>
-							<input type="text" id="output_format_conf" name="output_format_conf" class="form-control"
-								   ng-model="parameters.output.formatconf" />
-						</div>
+                        <div class="form-group">
+                            <label for="output_format_conf" class="control-label">
+                                <span>{{ 'APP.CONVERSION.LABEL.OUTPUT.FORMAT.CONF' | translate }}</span>
+                                <span>
+                                    <i class="fa fa-question-circle-o" title="{{ 'APP.CONVERSION.ALTTEXT.FORMATCONF' | translate }}"></i>
+                                </span>
+                            </label>
+                            <input type="text" id="output_format_conf" name="output_format_conf" class="form-control"
+                                   ng-model="parameters.output.formatconf" />
+                        </div>
                         <div class="form-group">
                             <label for="output_snippet" class="control-label">
                                 {{ 'APP.CONVERSION.LABEL.OUTPUT.SNIPPET' | translate }}
