rest-frontend: move rss feed to news/feed.rss

--- a/src/tools/rest-frontend/public/pages/main/template.html
+++ b/src/tools/rest-frontend/public/pages/main/template.html
@@ -116,7 +116,7 @@
                 &diams;
             </span>
             <span>
-                <a href="rss/feed.rss" type="application/atom+xml" target="_self">
+                <a href="news/feed.rss" type="application/atom+xml" target="_self">
                     <img src="assets/img/rss-feed-14x14.png" />
                 </a>
             </span>
