--- a/src/tools/rest-frontend/public/pages/main/website/conversion.html
+++ b/src/tools/rest-frontend/public/pages/main/website/conversion.html
@@ -13,7 +13,11 @@
                              ng-class="{'has-error': convertForm.input_format.$invalid && !convertForm.input_format.$pristine,
                                 'has-success': convertForm.input_format.$valid && convertForm.input_format.$dirty}">
                             <label for="input_format" class="control-label">
-                                {{ 'APP.CONVERSION.LABEL.INPUT.FORMAT' | translate }}
+                                <span>{{ 'APP.CONVERSION.LABEL.INPUT.FORMAT' | translate }}</span>
+                                <span>
+                                    <a href="/plugins/{{ parameters.input.format.plugin.nameWithoutConf }}"
+                                       target="_blank"><i class="fa fa-external-link"></i></a>
+                                </span>
                             </label>
                             <select id="input_format" name="input_format" class="form-control"
                                     ng-model="parameters.input.format"
@@ -61,7 +65,11 @@
                              ng-class="{'has-error': convertForm.output_format.$invalid && !convertForm.output_format.$pristine,
                                 'has-success': convertForm.output_format.$valid && convertForm.output_format.$dirty}">
                             <label for="output_format" class="control-label">
-                                {{ 'APP.CONVERSION.LABEL.OUTPUT.FORMAT' | translate }}
+                                <span>{{ 'APP.CONVERSION.LABEL.OUTPUT.FORMAT' | translate }}</span>
+                                <span>
+                                    <a href="/plugins/{{ parameters.output.format.plugin.nameWithoutConf }}"
+                                       target="_blank"><i class="fa fa-external-link"></i></a>
+                                </span>
                             </label>
                             <select id="output_format" name="output_format" class="form-control"
                                     ng-model="parameters.output.format"
