--- a/src/tools/rest-frontend/public/pages/main/website/news.html
+++ b/src/tools/rest-frontend/public/pages/main/website/news.html
@@ -18,7 +18,7 @@
     <div class="col-md-9">
         <div class="panel panel-default">
             <div class="panel-body">
-                <a class="btn btn-default btn-sm pull-right"
+                <a class="btn btn-default btn-sm pull-right" style="margin-bottom:5px;"
                    href="{{ githubRoot + currentFile.file }}"
                    target="_blank">{{ 'APP.WEBSITE.LISTFILES.BUTTON.SHOWONGITHUB' | translate }}</a>
                 <div class="docu markdown" id="markdown-document">
