rest-frontend: clearify license of snippets

--- a/src/tools/rest-frontend/public/pages/main/entries/details.html
+++ b/src/tools/rest-frontend/public/pages/main/entries/details.html
@@ -62,6 +62,8 @@
                 </tr>
             </table>
         </div>
+        <p translate="APP.ENTRIES.DETAILS.LABEL.LICENSE" translate-compile
+           class="sm-pl-10" style="margin-top:-10px"></p>
     </div>
 
     <div class="col-md-7">
