--- a/src/tools/rest-frontend/public/pages/main/entries/create.html
+++ b/src/tools/rest-frontend/public/pages/main/entries/create.html
@@ -1,4 +1,11 @@
 <div class="row">
+    <div class="col-md-12 sm-mb-10">
+        <div class="alert alert-info" ng-show="show.howDoesItWork"
+             translate="APP.ENTRIES.CREATE.LABEL.HOWDOESITWORK" translate-compile></div>
+        <button class="btn btn-primary btn-sm pull-right"
+                ng-click="ctrl.show('howDoesItWork')" ng-hide="show.howDoesItWork"
+                translate="APP.ENTRIES.CREATE.BUTTON.HOWDOESITWORK"></button>
+    </div>
     <div class="col-md-12">
         <div class="panel panel-default">
             <div class="panel-heading">
