rest-frontend: add button for 'my snippets' to user menu as requested in #1151

--- a/src/tools/rest-frontend/public/pages/main/template.html
+++ b/src/tools/rest-frontend/public/pages/main/template.html
@@ -33,6 +33,9 @@
                         <li>
                             <a ui-sref="main.account">{{ 'APP.NAV.BUTTON.ACCOUNT' | translate }}</a>
                         </li>
+                        <li>
+                            <a href="#" ng-click="ctrl.goMySnippets()">{{ 'APP.NAV.BUTTON.MYSNIPPETS' | translate }}</a>
+                        </li>
                         <li role="separator" class="divider"></li>
                         <li>
                             <a ui-sref="main.auth.logout">{{ 'APP.NAV.BUTTON.LOGOUT' | translate }}</a>
