--- a/src/tools/rest-frontend/public/pages/main/website/home.html
+++ b/src/tools/rest-frontend/public/pages/main/website/home.html
@@ -117,9 +117,8 @@
             <div class="col-md-8">
                 <h3 class="text-center">{{ 'APP.HOME.HEADLINE.HOWITWORKS' | translate }}</h3>
                 <div class="text-center">
-                    <script type="text/javascript" src="https://asciinema.org/a/0z7byvhbyljcnfx89qwd8wxrb.js"
-                            id="asciicast-0z7byvhbyljcnfx89qwd8wxrb" async>
-                    </script>
+                    <asciinema-player src="vendor/asciinema/asciinema-demo.json"
+                                      cols="100" poster="npt:49"></asciinema-player>
                 </div>
             </div>
             <!-- Recent news -->
