rest-frontend: add 'agree to license' info field + suggest usage of ini, ni, yajl

--- a/src/tools/rest-frontend/public/pages/main/entries/form.html
+++ b/src/tools/rest-frontend/public/pages/main/entries/form.html
@@ -269,6 +269,11 @@
 
     <div class="row">
         <div class="col-md-12">
+            <div class="alert alert-info"
+                 translate="APP.ENTRIES.FORM.LABEL.CONFIRMLICENSE" translate-compile>
+            </div>
+        </div>
+        <div class="col-md-12">
             <button type="submit" class="btn btn-primary"
                     ng-click="ctrl.submit()"
                     ng-disabled="entryForm.$pristine || entryForm.$invalid">
