--- a/src/tools/rest-frontend/public/pages/main/entries/form.html
+++ b/src/tools/rest-frontend/public/pages/main/entries/form.html
@@ -215,12 +215,15 @@
                 <div class="form-group"
                      ng-class="{'has-error': entryForm.config_format.$invalid && !entryForm.config_format.$pristine,
                                 'has-success': entryForm.config_format.$valid && entryForm.config_format.$dirty}">
+                    <span class="pull-right">
+                        <a href="/plugins/{{ entry.configuration.format.plugin.nameWithoutConf }}"
+                           target="_blank">
+                            <span>{{ 'APP.CONVERSION.LABEL.FORMAT.INFO' | translate }}</span>
+                            <i class="fa fa-external-link"></i>
+                        </a>
+                    </span>
                     <label for="config_format" class="control-label">
                         <span>{{ 'APP.ENTRIES.FORM.LABEL.CONFIGURATION.FORMAT' | translate }}</span>
-                        <span>
-                            <a href="/plugins/{{ entry.configuration.format.plugin.nameWithoutConf }}"
-                               target="_blank"><i class="fa fa-external-link"></i></a>
-                        </span>
                     </label>
                     <select id="config_format" name="config_format" class="form-control"
                             ng-model="entry.configuration.format"
