rest-frontend: snippet description allows for newlines

--- a/src/tools/rest-frontend/public/pages/main/entries/details.html
+++ b/src/tools/rest-frontend/public/pages/main/entries/details.html
@@ -18,12 +18,12 @@
 </div>
 <div class="row">
     <div class="col-md-5">
-        <div class="panel panel-default snippet-description">
+        <div class="panel panel-default entry details">
             <div class="panel-heading clearfix">
                 <h4 class="panel-title pull-left">{{ entry.meta.title}}</h4>
             </div>
             <div class="panel-body">
-                <span>{{ entry.meta.description}}</span>
+                <span class="description">{{ entry.meta.description}}</span>
             </div>
 
             <!-- Table -->
