--- a/src/tools/rest-frontend/public/pages/main/entries/search.html
+++ b/src/tools/rest-frontend/public/pages/main/entries/search.html
@@ -40,7 +40,7 @@
 		<table class="table table-striped table-hover">
 			<thead>
 				<tr>
-					<th colspan="4" ng-click="ctrl.toggleSorting('key')">
+					<th colspan="3" ng-click="ctrl.toggleSorting('key')">
 						{{ 'APP.ENTRIES.SEARCH.TABLE.HEADER.KEY' | translate }}
 						<i class="fa pull-right" ng-class="{'fa-caret-up': options.sort.value.id === 'asc',
 															'fa-caret-down': options.sort.value.id === 'desc'}"
@@ -66,12 +66,6 @@
 						<i class="fa pull-right" ng-class="{'fa-caret-up': options.sort.value.id === 'asc',
 															'fa-caret-down': options.sort.value.id === 'desc'}"
 						   ng-show="options.sortby.value.id === 'scope'"></i>
-					</th>
-					<th class="hidden-xs" ng-click="ctrl.toggleSorting('slug')">
-						{{ 'APP.ENTRIES.SEARCH.TABLE.HEADER.SLUG' | translate }}
-						<i class="fa pull-right" ng-class="{'fa-caret-up': options.sort.value.id === 'asc',
-															'fa-caret-down': options.sort.value.id === 'desc'}"
-						   ng-show="options.sortby.value.id === 'slug'"></i>
 					</th>
 					<th ng-click="ctrl.toggleSorting('title')">
 						{{ 'APP.ENTRIES.SEARCH.TABLE.HEADER.TITLE' | translate }}
@@ -99,7 +93,6 @@
 					<td>{{ result.key.organization}}</td>
 					<td>{{ result.key.application}}</td>
 					<td class="hidden-xs">{{ result.key.scope}}</td>
-					<td class="hidden-xs">{{ result.key.slug}}</td>
 					<td>{{ result.title}}</td>
 					<td>{{ result.author}}</td>
 					<td class="hidden-xs">{{ result.created_at * 1000 | date:'yyyy-MM-dd HH:mm' }}</td>
@@ -108,6 +101,11 @@
 								ng-click="ctrl.goToEntry(result.key.full)">
 							{{ 'APP.ENTRIES.SEARCH.TABLE.ACTION.BUTTON.DETAILS' | translate }}
 						</button>
+                        <a class="btn btn-xs btn-default"
+                           href="{{ config.backend.root + 'database/' + result.key.full }}" target="_blank">
+                            <span>{{ 'APP.ENTRIES.SEARCH.TABLE.ACTION.BUTTON.RAWDETAILS' | translate }}</span>
+                            <i class="fa fa-external-link" style="margin-left:2px"></i>
+                        </a>
 					</td>
 				</tr>
 				<tr ng-show="!searchResult.entries">
