rest-frontend: search does now show when it is loading
Website: Loading shows wrong text (fixes #1251)

--- a/src/tools/rest-frontend/public/pages/main/entries/search.html
+++ b/src/tools/rest-frontend/public/pages/main/entries/search.html
@@ -109,7 +109,10 @@
 					</td>
 				</tr>
 				<tr ng-show="!searchResult.entries">
-					<th colspan="8" class="text-center">{{ 'APP.ENTRIES.SEARCH.TABLE.LABEL.NORESULTS' | translate }}</th>
+                    <th colspan="8" class="text-center"
+                        ng-show="!is_loaded">{{ 'APP.ENTRIES.SEARCH.TABLE.LABEL.ISLOADING' | translate }}</th>
+					<th colspan="8" class="text-center"
+                        ng-show="is_loaded">{{ 'APP.ENTRIES.SEARCH.TABLE.LABEL.NORESULTS' | translate }}</th>
 				</tr>
 			</tbody>
 		</table>
